# fastapi_quick_template

./: .env.example  .gitignore  AUTHENTICATION.md  BASIC_AUTH.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 001_example_initial_migration.py
api/: __init__.py  main.py  routers.py
api/configs/: __init__.py  database.py  settings.py
api/contrib/: __init__.py  dependencies.py  models.py  schemas.py
api/example_entity/: __init__.py  controller.py  models.py  schemas.py
api/users/: __init__.py  auth.py  basic_auth.py  controller.py  models.py  schemas.py
